--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
             <img src="resource/logo.png" alt="Mohammad Ishrak Abedin" class="profile-image">
             <div class="profile-info">
                 <h1>Mohammad Ishrak Abedin</h1>
-                <p>Lecturer in Computer Science & Engineering</p>
+                <p>Lecturer in Computer Science and Engineering (CSE)</p>
                 <p>Islamic University of Technology (IUT)</p>
             </div>
         </div>
@@ -59,37 +59,42 @@
 
         <section id="about">
             <h2><i class="fas fa-user"></i> About Me</h2>
-            <p>I am a Senior Lecturer in Computer Science and Engineering with over 15 years of experience in academia
-                and industry. My research interests include distributed systems, machine learning, and computer vision.
-                I am passionate about making complex technical concepts accessible to students and fostering an
-                inclusive learning environment.</p>
+            <p>I have been working as a lecturer in the department of CSE at IUT since 2021. My area of interest includes Human-Computer Interaction, Accessibility and Assistive Technologies, Computer Graphics and Game Development. In my personal time, I like to explore and learn programming langauges (I am kinda attracted to the low level ones), frameworks, engines, softwares, and techs. Building different tools for automation is my hobby. I also like to mess with Linux in my free time.</p>
         </section>
 
         <section id="courses">
             <h2><i class="fas fa-chalkboard-teacher"></i> Courses</h2>
             <div class="course-grid">
                 <div class="course-card" onclick="displayOnModal(this)">
-                    <h3>CS301: Advanced Algorithms</h3>
-                    <p>Graduate-level course covering complex algorithms and their applications.</p>
+                    <h3>CSE 4849: Human Computer Interaction</h3>
+                    <p>Undergrad-level course introducing students to the domain of HCI.</p>
                     <div class="modal-candidate">
-                        <h1> CS301: Advanced Algorithms </h1>
-                        <p> Graduate-level course covering complex algorithms and their applications. Some more placeholder description can be put here. </p>
+                        <h1> CSE 4849: Human Computer Interaction </h1>
+                        <p> A undergrad course covering the basic concepts of Human-Computer Interaction and the different stages involved in Human Centered design, e.g. requirements establishment, ideation, alternative designs, prototyping, analysis, and evaluation methods. </p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
-                    <h3>CS202: Machine Learning</h3>
-                    <p>Introduction to machine learning concepts and implementations.</p>
+                    <h3>CSE 4551: Computer Graphics and Multimedia Systems</h3>
+                    <p>Introduction to computer graphics and multimedia systems.</p>
                     <div class="modal-candidate">
-                        <h1> Placeholder Title </h1>
-                        <p> Placeholder description. </p>
+                        <h1> CSE 4551: Computer Graphics and Multimedia Systems </h1>
+                        <p> A course introducing students to the domain of computer graphics and the rendering pipeline, including modeling, transformation, scene graphs, rigging, dynamics, shading, ray tracing, and rasterization. </p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
-                    <h3>ENG405: Distributed Systems</h3>
-                    <p>Advanced topics in distributed computing and system design.</p>
+                    <h3>CSE 4614/4714: Technical Report Writing</h3>
+                    <p>Discussion on how to write technical reports and sessionals on LaTeX</p>
                     <div class="modal-candidate">
-                        <h1> Placeholder Title </h1>
-                        <p> Placeholder description. </p>
+                        <h1> CSE 4614/4714: Technical Report Writing </h1>
+                        <p> A two part sessional course that introduces undergrad students to the methods and toolings of technical report writing. One part is associated with the design, planning, and structuring guidelines of a technical report, where as the other part is about learning the use of LaTeX as a typesetting system.</p>
+                    </div>
+                </div>
+                <div class="course-card" onclick="displayOnModal(this)">
+                    <h3>CSE 4107/4108/4202: Structured Programming</h3>
+                    <p>Introductory course to programming for the Bachelors</p>
+                    <div class="modal-candidate">
+                        <h1> CSE 4107/4108/4202: Structured Programming </h1>
+                        <p> A theory course with two sessionals across two semesters to introduce beginners to the concept of 'Structured' programming with C. Covers fundamental concepts from statements, conditionals, iterations, functions, structures to advanced topics, such as pointers.</p>
                     </div>
                 </div>
             </div>
@@ -98,46 +103,59 @@
         <section id="research">
             <h2><i class="fas fa-microscope"></i> Research Interests</h2>
             <div class="skills-grid">
-                <div class="skill-item">Distributed Systems</div>
-                <div class="skill-item">Machine Learning</div>
-                <div class="skill-item">Computer Vision</div>
-                <div class="skill-item">Cloud Computing</div>
-                <div class="skill-item">Edge Computing</div>
-                <div class="skill-item">System Architecture</div>
+                <div class="skill-item">HCI</div>
+                <div class="skill-item">Assistive Technology</div>
+                <div class="skill-item">Games and Virtual Reality</div>
+                <div class="skill-item">Interaction Design</div>
+                <div class="skill-item">Computer Graphics</div>
+                <div class="skill-item">Sensor-based Devices</div>
+                <div class="skill-item">Motion Capture</div>
+                <div class="skill-item">System Automation</div>
             </div>
         </section>
 
         <section id="publications">
-            <h2><i class="fas fa-book"></i> Recent Publications</h2>
+            <h2><i class="fas fa-book"></i>Technical Works</h2>
+
             <div class="publication">
-                <h3>"Distributed Learning Systems: A New Paradigm"</h3>
-                <p>IEEE Transactions on Parallel and Distributed Systems, 2023</p>
+                <h3><a href="https://arxiv.org/abs/2210.04483" title="Link to Online Library">
+                    Auxilio and Beyond: Comparative Evaluation, Usability, and Design Guidelines for Head Movement-based Assistive Mouse Controllers
+                </a></h3>
+                <p>arXiv, 2024</p>
             </div>
+
             <div class="publication">
-                <h3>"Edge Computing in Modern IoT Architectures"</h3>
-                <p>ACM Computing Surveys, 2022</p>
+                <h3><a href="https://ieeexplore.ieee.org/document/9714337" title="Link to Online Library">
+                    ANTASID: A Novel Temporal Adjustment to Shannon's Index of Difficulty for Quantifying
+                    the Perceived Difficulty of Uncontrolled Pointing Tasks
+                </a></h3>
+                <p>IEEE Access, 2022</p>
             </div>
+            
             <div class="publication">
-                <h3>"Efficient Resource Allocation in Cloud Systems"</h3>
-                <p>Journal of Cloud Computing, 2022</p>
+                <h3><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=A3qBo5kAAAAJ&citation_for_view=A3qBo5kAAAAJ:u-x6o8ySG0sC" title="Link to Online Library">
+                    Ambulatory Human Posture Detection using MARG Sensor Arrays and Madgwick Filter
+                </a></h3>
+                <p>Bachelor's Thesis, IUT, 2021</p>
             </div>
+
         </section>
 
         <section id="contact">
             <h2><i class="fas fa-envelope"></i> Contact</h2>
-            <p>Email: ishrakabedin@iut-dhaka.edu</p>
-            <p>Office: 2nd Academic Building, Room 503</p>
-            <p>Office Hours: Wednesday and Friday, 2:30-3:30 PM</p>
+            <p>Email: <a class="mail-address" href="mailto:ishrakabedin@iut-dhaka.edu" title="Mail Address">ishrakabedin@iut-dhaka.edu</a></p>
+            <p>Office: Room 503, 2nd Academic Building, IUT</p>
+            <p>Office Hours: Monday to Friday, 08:00 AM - 05:00 PM</p>
         </section>
     </main>
 
     <footer>
-        <p>Mohammad Ishrak Abedin © 2024</p>
+        <p>Mohammad Ishrak Abedin © 2025</p>
         <div class="contact-links">
-            <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://www.linkedin.com/in/ishrakabedin" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/IshrakAbedin" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://orcid.org/0000-0002-7825-0339" title="ORCiD"><i class="fa-brands fa-orcid"></i></a>
+            <a href="https://scholar.google.com/citations?hl=en&user=A3qBo5kAAAAJ&view_op=list_works" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </footer>
 
