Added skills section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -38,6 +39,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#research">Research</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -59,7 +61,11 @@
 
         <section id="about">
             <h2><i class="fas fa-user"></i> About Me</h2>
-            <p>I have been working as a lecturer in the department of CSE at IUT since 2021. My area of interest includes Human-Computer Interaction, Accessibility and Assistive Technologies, Computer Graphics and Game Development. In my personal time, I like to explore and learn programming langauges (I am kinda attracted to the low level ones), frameworks, engines, softwares, and techs. Building different tools for automation is my hobby. I also like to mess with Linux in my free time.</p>
+            <p>I have been working as a lecturer in the department of CSE at IUT since 2021. My area of interest
+                includes Human-Computer Interaction, Accessibility and Assistive Technologies, Computer Graphics and
+                Game Development. In my personal time, I like to explore and learn programming langauges (I am kinda
+                attracted to the low level ones), frameworks, engines, softwares, and techs. Building different tools
+                for automation is my hobby. I also like to mess with Linux in my free time.</p>
         </section>
 
         <section id="courses">
@@ -70,7 +76,9 @@
                     <p>Undergrad-level course introducing students to the domain of HCI.</p>
                     <div class="modal-candidate">
                         <h1> CSE 4849: Human Computer Interaction </h1>
-                        <p> A undergrad course covering the basic concepts of Human-Computer Interaction and the different stages involved in Human Centered design, e.g. requirements establishment, ideation, alternative designs, prototyping, analysis, and evaluation methods. </p>
+                        <p> A undergrad course covering the basic concepts of Human-Computer Interaction and the
+                            different stages involved in Human Centered design, e.g. requirements establishment,
+                            ideation, alternative designs, prototyping, analysis, and evaluation methods. </p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
@@ -78,7 +86,9 @@
                     <p>Introduction to computer graphics and multimedia systems.</p>
                     <div class="modal-candidate">
                         <h1> CSE 4551: Computer Graphics and Multimedia Systems </h1>
-                        <p> A course introducing students to the domain of computer graphics and the rendering pipeline, including modeling, transformation, scene graphs, rigging, dynamics, shading, ray tracing, and rasterization. </p>
+                        <p> A course introducing students to the domain of computer graphics and the rendering pipeline,
+                            including modeling, transformation, scene graphs, rigging, dynamics, shading, ray tracing,
+                            and rasterization. </p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
@@ -86,7 +96,10 @@
                     <p>Discussion on how to write technical reports and sessionals on LaTeX</p>
                     <div class="modal-candidate">
                         <h1> CSE 4614/4714: Technical Report Writing </h1>
-                        <p> A two part sessional course that introduces undergrad students to the methods and toolings of technical report writing. One part is associated with the design, planning, and structuring guidelines of a technical report, where as the other part is about learning the use of LaTeX as a typesetting system.</p>
+                        <p> A two part sessional course that introduces undergrad students to the methods and toolings
+                            of technical report writing. One part is associated with the design, planning, and
+                            structuring guidelines of a technical report, where as the other part is about learning the
+                            use of LaTeX as a typesetting system.</p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
@@ -94,7 +107,9 @@
                     <p>Introductory course to programming for the Bachelors</p>
                     <div class="modal-candidate">
                         <h1> CSE 4107/4108/4202: Structured Programming </h1>
-                        <p> A theory course with two sessionals across two semesters to introduce beginners to the concept of 'Structured' programming with C. Covers fundamental concepts from statements, conditionals, iterations, functions, structures to advanced topics, such as pointers.</p>
+                        <p> A theory course with two sessionals across two semesters to introduce beginners to the
+                            concept of 'Structured' programming with C. Covers fundamental concepts from statements,
+                            conditionals, iterations, functions, structures to advanced topics, such as pointers.</p>
                     </div>
                 </div>
             </div>
@@ -114,28 +129,73 @@
             </div>
         </section>
 
+        <section id="skills">
+            <h2><i class="fa-solid fa-laptop-code"></i> Skills</h2>
+            <div class="skills-grid">
+                <!-- Programming Languages -->
+                <div class="skill-item"><i class="devicon-c-plain" title="C"></i></div>
+                <div class="skill-item"><i class="devicon-cplusplus-plain" title="C++"></i></div>
+                <div class="skill-item"><i class="devicon-rust-plain" title="Rust"></i></div>
+                <div class="skill-item"><i class="devicon-csharp-plain" title="C#"></i></div>
+                <div class="skill-item"><i class="devicon-python-plain" title="Python"></i></div>
+                <div class="skill-item"><i class="devicon-lua-plain" title="Lua"></i></div>
+                <div class="skill-item"><i class="devicon-latex-plain" title="LaTeX"></i></div>
+                <div class="skill-item"><i class="devicon-javascript-plain" title="JavaScript"></i></div>
+                <div class="skill-item"><i class="devicon-go-original-wordmark" title="Go"></i></div>
+                <div class="skill-item"><i class="devicon-svelte-plain" title="Svelte"></i></div>
+                <div class="skill-item"><i class="devicon-opengl-plain" title="OpenGL"></i></div>
+
+                <!-- Tools -->
+                <div class="skill-item"><i class="fa-solid fa-database ifix" title="SQL"></i></i></div>
+                <div class="skill-item"><i class="devicon-git-plain" title="Git"></i></div>
+                <div class="skill-item"><i class="devicon-docker-plain" title="Docker"></i></div>
+                <div class="skill-item"><i class="devicon-jenkins-line" title="Jenkins"></i></div>
+                <div class="skill-item"><i class="fa-solid fa-file-excel ifix" title="Spreadsheet"></i></div>
+                <div class="skill-item"><i class="devicon-arduino-plain" title="Arduino"></i></div>
+                <div class="skill-item"><i class="devicon-raspberrypi-plain" title="Raspberry PI"></i></div>
+
+                <!-- Design / Creative Tools -->
+                <div class="skill-item"><i class="devicon-maya-plain" title="Autodesk Maya"></i></div>
+                <div class="skill-item"><i class="devicon-blender-original" title="Blender"></i></div>
+                <div class="skill-item"><i class="devicon-gimp-plain" title="GIMP"></i></div>
+                <div class="skill-item"><i class="devicon-inkscape-plain" title="Inkscape"></i></div>
+                <div class="skill-item"><i class="devicon-godot-plain coloured" title="Godot"></i></div>
+                <div class="skill-item"><i class="devicon-unrealengine-original" title="Unreal Engine"></i></div>
+
+                <!-- AI / ML Frameworks -->
+                <div class="skill-item"><i class="devicon-pytorch-original" title="PyTorch"></i></div>
+                <div class="skill-item"><i class="devicon-tensorflow-original" title="TensorFlow"></i></div>
+                
+                <!-- Linux -->
+                <div class="skill-item"><i class="devicon-archlinux-plain" title="Arch Linux"></i></div>
+                <div class="skill-item"><i class="devicon-ubuntu-plain" title="Ubuntu"></i></div>
+            </div>
+        </section>
+
         <section id="publications">
             <h2><i class="fas fa-book"></i>Technical Works</h2>
 
             <div class="publication">
                 <h3><a href="https://arxiv.org/abs/2210.04483" title="Link to Online Library">
-                    Auxilio and Beyond: Comparative Evaluation, Usability, and Design Guidelines for Head Movement-based Assistive Mouse Controllers
-                </a></h3>
+                        Auxilio and Beyond: Comparative Evaluation, Usability, and Design Guidelines for Head
+                        Movement-based Assistive Mouse Controllers
+                    </a></h3>
                 <p>arXiv, 2024</p>
             </div>
 
             <div class="publication">
                 <h3><a href="https://ieeexplore.ieee.org/document/9714337" title="Link to Online Library">
-                    ANTASID: A Novel Temporal Adjustment to Shannon's Index of Difficulty for Quantifying
-                    the Perceived Difficulty of Uncontrolled Pointing Tasks
-                </a></h3>
+                        ANTASID: A Novel Temporal Adjustment to Shannon's Index of Difficulty for Quantifying
+                        the Perceived Difficulty of Uncontrolled Pointing Tasks
+                    </a></h3>
                 <p>IEEE Access, 2022</p>
             </div>
-            
+
             <div class="publication">
-                <h3><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=A3qBo5kAAAAJ&citation_for_view=A3qBo5kAAAAJ:u-x6o8ySG0sC" title="Link to Online Library">
-                    Ambulatory Human Posture Detection using MARG Sensor Arrays and Madgwick Filter
-                </a></h3>
+                <h3><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=A3qBo5kAAAAJ&citation_for_view=A3qBo5kAAAAJ:u-x6o8ySG0sC"
+                        title="Link to Online Library">
+                        Ambulatory Human Posture Detection using MARG Sensor Arrays and Madgwick Filter
+                    </a></h3>
                 <p>Bachelor's Thesis, IUT, 2021</p>
             </div>
 
@@ -143,7 +203,8 @@
 
         <section id="contact">
             <h2><i class="fas fa-envelope"></i> Contact</h2>
-            <p>Email: <a class="mail-address" href="mailto:ishrakabedin@iut-dhaka.edu" title="Mail Address">ishrakabedin@iut-dhaka.edu</a></p>
+            <p>Email: <a class="mail-address" href="mailto:ishrakabedin@iut-dhaka.edu"
+                    title="Mail Address">ishrakabedin@iut-dhaka.edu</a></p>
             <p>Office: Room 503, 2nd Academic Building, IUT</p>
             <p>Office Hours: Monday to Friday, 08:00 AM - 05:00 PM</p>
         </section>
@@ -155,7 +216,8 @@
             <a href="https://www.linkedin.com/in/ishrakabedin" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/IshrakAbedin" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="https://orcid.org/0000-0002-7825-0339" title="ORCiD"><i class="fa-brands fa-orcid"></i></a>
-            <a href="https://scholar.google.com/citations?hl=en&user=A3qBo5kAAAAJ&view_op=list_works" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://scholar.google.com/citations?hl=en&user=A3qBo5kAAAAJ&view_op=list_works"
+                title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
         </div>
     </footer>
 
