Updated colors and images

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammad Ishrak Abedin - Lecturer, CSE, IUT</title>
+    <link rel="icon" href="resource/Icon.svg" type="image/svg+xml">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
@@ -25,7 +27,8 @@
 
     <header>
         <div class="profile-section">
-            <img src="resource/logo.png" alt="Mohammad Ishrak Abedin" class="profile-image">
+            <img src="resource/LogoLight.svg" alt="Mohammad Ishrak Abedin" class="profile-image profile-light">
+            <img src="resource/LogoDark.svg" alt="Mohammad Ishrak Abedin" class="profile-image profile-dark">
             <div class="profile-info">
                 <h1>Mohammad Ishrak Abedin</h1>
                 <p>Lecturer in Computer Science and Engineering (CSE)</p>
@@ -165,7 +168,7 @@
                 <!-- AI / ML Frameworks -->
                 <div class="skill-item"><i class="devicon-pytorch-original" title="PyTorch"></i></div>
                 <div class="skill-item"><i class="devicon-tensorflow-original" title="TensorFlow"></i></div>
-                
+
                 <!-- Linux -->
                 <div class="skill-item"><i class="devicon-archlinux-plain" title="Arch Linux"></i></div>
                 <div class="skill-item"><i class="devicon-ubuntu-plain" title="Ubuntu"></i></div>
