Updated theme toggler

--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
 
 <body>
     <button class="theme-toggle" onclick="toggleTheme()">
-        <i class="fas fa-adjust"></i>
-        <!-- Theme -->
+        <!-- <i class="fas fa-adjust"></i> -->
+        <i class="fa-solid fa-sun only-dark"></i>
+        <i class="fa-solid fa-moon only-light"></i>
     </button>
 
     <header>
         <div class="profile-section">
-            <img src="resource/LogoLight.svg" alt="Mohammad Ishrak Abedin" class="profile-image profile-light">
-            <img src="resource/LogoDark.svg" alt="Mohammad Ishrak Abedin" class="profile-image profile-dark">
+            <img src="resource/LogoLight.svg" alt="Mohammad Ishrak Abedin" class="profile-image only-light">
+            <img src="resource/LogoDark.svg" alt="Mohammad Ishrak Abedin" class="profile-image only-dark">
             <div class="profile-info">
                 <h1>Mohammad Ishrak Abedin</h1>
                 <p>Lecturer in Computer Science and Engineering (CSE)</p>
