Polished contents and removed scanline animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad Ishrak Abedin - Lecturer, CSE, IUT</title>
+    <title>Mohammad Ishrak Abedin - Profile</title>
     <link rel="icon" href="resource/Icon.svg" type="image/svg+xml">
 
     <!-- Automatically apply theme based on system preference -->
@@ -66,7 +66,7 @@
             <li><a href="#courses">Courses</a></li>
             <li><a href="#research">Research</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#publications">Publications</a></li>
+            <li><a href="#techworks">Tech-works</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -176,17 +176,17 @@
                 <div class="skill-item"><i class="devicon-git-plain" title="Git"></i></div>
                 <div class="skill-item"><i class="devicon-docker-plain" title="Docker"></i></div>
                 <div class="skill-item"><i class="devicon-jenkins-line" title="Jenkins"></i></div>
-                <div class="skill-item"><i class="fa-solid fa-file-excel ifix" title="Spreadsheet"></i></div>
+                <div class="skill-item"><i class="fa-solid fa-table ifix" title="Spreadsheet"></i></div>
                 <div class="skill-item"><i class="devicon-arduino-plain" title="Arduino"></i></div>
                 <div class="skill-item"><i class="devicon-raspberrypi-plain" title="Raspberry PI"></i></div>
 
                 <!-- Design / Creative Tools -->
-                <div class="skill-item"><i class="devicon-maya-plain" title="Autodesk Maya"></i></div>
                 <div class="skill-item"><i class="devicon-blender-original" title="Blender"></i></div>
+                <div class="skill-item"><i class="devicon-maya-plain" title="Autodesk Maya"></i></div>
                 <div class="skill-item"><i class="devicon-gimp-plain" title="GIMP"></i></div>
                 <div class="skill-item"><i class="devicon-inkscape-plain" title="Inkscape"></i></div>
-                <div class="skill-item"><i class="devicon-godot-plain coloured" title="Godot"></i></div>
                 <div class="skill-item"><i class="devicon-unrealengine-original" title="Unreal Engine"></i></div>
+                <div class="skill-item"><i class="devicon-godot-plain coloured" title="Godot"></i></div>
 
                 <!-- AI / ML Frameworks -->
                 <div class="skill-item"><i class="devicon-pytorch-original" title="PyTorch"></i></div>
@@ -198,7 +198,7 @@
             </div>
         </section>
 
-        <section id="publications">
+        <section id="techworks">
             <h2><i class="fas fa-book"></i>Technical Works</h2>
 
             <div class="publication">
