--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="course-grid">
                 <div class="course-card" onclick="displayOnModal(this)">
                     <h3>CSE 4849: Human Computer Interaction</h3>
-                    <p>Undergrad-level course introducing students to the domain of HCI.</p>
+                    <p>Undergrad-level course introducing students to the domain of HCI</p>
                     <div class="modal-candidate">
                         <h1> CSE 4849: Human Computer Interaction </h1>
                         <p> A undergrad course covering the basic concepts of Human-Computer Interaction and the
@@ -109,7 +109,7 @@
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
                     <h3>CSE 4551: Computer Graphics and Multimedia Systems</h3>
-                    <p>Introduction to computer graphics and multimedia systems.</p>
+                    <p>Introduction to computer graphics and multimedia systems</p>
                     <div class="modal-candidate">
                         <h1> CSE 4551: Computer Graphics and Multimedia Systems </h1>
                         <p> A course introducing students to the domain of computer graphics and the rendering pipeline,
@@ -125,17 +125,17 @@
                         <p> A two part sessional course that introduces undergrad students to the methods and toolings
                             of technical report writing. One part is associated with the design, planning, and
                             structuring guidelines of a technical report, where as the other part is about learning the
-                            use of LaTeX as a typesetting system.</p>
+                            use of LaTeX as a typesetting system. </p>
                     </div>
                 </div>
                 <div class="course-card" onclick="displayOnModal(this)">
                     <h3>CSE 4107/4108/4202: Structured Programming</h3>
-                    <p>Introductory course to programming for the Bachelors</p>
+                    <p>Introductory course on programming for the Bachelors</p>
                     <div class="modal-candidate">
                         <h1> CSE 4107/4108/4202: Structured Programming </h1>
                         <p> A theory course with two sessionals across two semesters to introduce beginners to the
                             concept of 'Structured' programming with C. Covers fundamental concepts from statements,
-                            conditionals, iterations, functions, structures to advanced topics, such as pointers.</p>
+                            conditionals, iterations, functions, structures to advanced topics, such as pointers. </p>
                     </div>
                 </div>
             </div>
