Added the structures for modal skill info

--- a/index.html
+++ b/index.html
@@ -159,8 +159,34 @@
             <h2><i class="fa-solid fa-laptop-code"></i> Skills</h2>
             <div class="skills-grid">
                 <!-- Programming Languages -->
-                <div class="skill-item"><i class="devicon-c-plain" title="C"></i></div>
-                <div class="skill-item"><i class="devicon-cplusplus-plain" title="C++"></i></div>
+                <div class="skill-item" onclick="displayOnModal(this)">
+                    <i class="devicon-c-plain" title="C"></i>
+                    <div class="modal-candidate">
+                        <h2> <i class="devicon-c-plain modal-icon"></i> The C Programming Language </h2>
+                        <p> I first got introduced to C in my intermediate (class 11 and 12) ICT course. But my proper
+                            training in C started in my first year of BSc Engineering as part of the Structured
+                            Programming course. After four years, I had to conduct the course myself as a teacher and
+                            that is when I fell in love with the book, "C Programming: A Modern Approach", by K.N King.
+                            Not only it taught me the ins and outs of C, but also it taught me how to learn a
+                            programming language and stay up to date with it.
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="skill-item" onclick="displayOnModal(this)">
+                    <i class="devicon-cplusplus-plain" title="C++"></i>
+                    <div class="modal-candidate">
+                        <h2> <i class="devicon-cplusplus-plain modal-icon"></i> The C++ Programming Language </h2>
+                        <p> While I did learn some C++ during my second year of bachelors, I started to learn it
+                            rigorously during the COVID-19 to build an imaginary game engine. The game engine was never
+                            finished, but I ended up getting entangled so much with Modern C++ that now I am comfortable
+                            learning the new library features reading documentations and tracking regular progress of
+                            the language and STL. (Still waiting for Linear Algebra and Compile-time Reflective
+                            Programming in 2025) (And yes, it is my most favorite language) </p>
+                    </div>
+                </div>
+
                 <div class="skill-item"><i class="devicon-rust-plain" title="Rust"></i></div>
                 <div class="skill-item"><i class="devicon-csharp-plain" title="C#"></i></div>
                 <div class="skill-item"><i class="devicon-python-plain" title="Python"></i></div>
